ingress-test.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-test
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: s1.test.com
      http:
        paths:
          - path: /
            backend:
              serviceName: s1
              servicePort: 80
    - host: s2.test.com
      http:
        paths:
          - path: /
            backend:
              serviceName: s2
              servicePort: 80
